Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17258

Regression: When QMAKESPEC is not defined explicitly in some fashion, include to qplatformdefs.h cannot be resolved

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.7.2
    • 4.7.2
    • Build System
    • None
    • Windows
    • b52bf57e46520fb65d3d4c43bdb9c3d972690cb8

      Looks like this happens because the fix for QTBUG-15159 (commit 515fd562d87290c3fc0eb45817434dd0744d346e). Configure.exe no longer copies the mkspec directory over to mkspecs/default but rather just generates the mkspecs/default/qmake.conf which includes the original qmake.conf using relative path. Not having the qplatformdefs.h in mkspecs/default breaks in the cases where QMAKESPEC is not defined explicitly.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes