Fix regression in creating mkspecs/default

Copy all files from original mkspec to default one and modify
*.conf, *.prf, and  *.h to include their original counterparts.

Task-number: QTBUG-17258
Reviewed-by: Oswald Buddenhagen
(cherry picked from commit b52bf57e46520fb65d3d4c43bdb9c3d972690cb8)